# b2bAI

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md
docs/lucrare/: abstract.tex  anexe.tex  arhitectura.tex  bibliography.bib  concluzie.tex  introducere.tex  main.tex  midi_generator.tex  plugin.tex  preliminarii.tex  title.tex
docs/prezentare/: main.tex
docs/rezumat/: main.tex
lib/midi_generator/: API.cpp  API.h  CMakeLists.txt  build.cpp  midi_generator.cpp  note.cpp  note.h
midi/: best.mid
scripts/: build.bat  build.sh  create_note.py
tests/: CMakeLists.txt  create_note.py  test.cpp  test_api.cpp  test_boost_note.py  test_commands.py  test_extract.cpp  test_note.cpp  test_python.cpp
